[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/level_6.gd" type="Script" id=2]
[ext_resource path="res://Level parts/spawn.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resorces/industrial.v2.png" type="Texture" id=4]
[ext_resource path="res://soundmaker/soundmaker.tscn" type="PackedScene" id=5]
[ext_resource path="res://Level parts/air_spawn.tscn" type="PackedScene" id=7]
[ext_resource path="res://Level parts/turret_spawn.tscn" type="PackedScene" id=8]

[sub_resource type="TileSet" id=1]
0/name = "industrial.v2.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 16, 32, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "industrial.v2.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 176, 112, 96, 96 )
1/tile_mode = 1
1/autotile/bitmask_mode = 1
1/autotile/bitmask_flags = [ Vector2( 0, 1 ), 176, Vector2( 0, 2 ), 50, Vector2( 1, 1 ), 58, Vector2( 1, 2 ), 184, Vector2( 2, 0 ), 152, Vector2( 2, 1 ), 26, Vector2( 3, 0 ), 186, Vector2( 3, 1 ), 146, Vector2( 3, 2 ), 154, Vector2( 3, 3 ), 178, Vector2( 3, 4 ), 146, Vector2( 3, 5 ), 18, Vector2( 4, 2 ), 146, Vector2( 4, 4 ), 146 ]
1/autotile/icon_coordinate = Vector2( 1, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "industrial.v2.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 192, 64, 64, 48 )
2/tile_mode = 1
2/autotile/bitmask_mode = 1
2/autotile/bitmask_flags = [ Vector2( 0, 0 ), 176, Vector2( 0, 1 ), 178, Vector2( 0, 2 ), 50, Vector2( 1, 0 ), 56, Vector2( 1, 1 ), 184, Vector2( 1, 2 ), 58, Vector2( 2, 0 ), 56, Vector2( 2, 1 ), 154, Vector2( 2, 2 ), 26, Vector2( 3, 0 ), 152, Vector2( 3, 1 ), 146 ]
2/autotile/icon_coordinate = Vector2( 3, 1 )
2/autotile/tile_size = Vector2( 16, 16 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "industrial.v2.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 128, 32, 64, 48 )
3/tile_mode = 1
3/autotile/bitmask_mode = 1
3/autotile/bitmask_flags = [ Vector2( 0, 0 ), 176, Vector2( 0, 1 ), 146, Vector2( 0, 2 ), 50, Vector2( 1, 0 ), 56, Vector2( 1, 1 ), 178, Vector2( 1, 2 ), 56, Vector2( 2, 0 ), 58, Vector2( 2, 1 ), 184, Vector2( 2, 2 ), 26, Vector2( 3, 0 ), 152, Vector2( 3, 1 ), 154, Vector2( 3, 2 ), 511 ]
3/autotile/icon_coordinate = Vector2( 1, 0 )
3/autotile/tile_size = Vector2( 16, 16 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "industrial.v2.png 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 80, 208, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "industrial.v2.png 5"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 192, 0, 64, 16 )
5/tile_mode = 1
5/autotile/bitmask_mode = 1
5/autotile/bitmask_flags = [ Vector2( 0, 0 ), 48, Vector2( 1, 0 ), 56, Vector2( 2, 0 ), 24, Vector2( 3, 0 ), 325 ]
5/autotile/icon_coordinate = Vector2( 0, 0 )
5/autotile/tile_size = Vector2( 16, 16 )
5/autotile/spacing = 0
5/autotile/occluder_map = [  ]
5/autotile/navpoly_map = [  ]
5/autotile/priority_map = [  ]
5/autotile/z_index_map = [  ]
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "industrial.v2.png 6"
6/texture = ExtResource( 4 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 352, 32, 32, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "industrial.v2.png 7"
7/texture = ExtResource( 4 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 80, 208, 16, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0

[node name="level_6" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap2" type="TileMap" parent="."]
position = Vector2( -80, -60 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -80, -60 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 524297, 1, 65536, 524298, 1, 1, 524299, 1, 1, 524300, 1, 131073, 524301, 1, 1, 524302, 1, 1, 524303, 1, 131073, 524304, 1, 1, 524305, 1, 1, 524306, 1, 131073, 524307, 1, 1, 524308, 1, 1, 524309, 1, 131073, 524310, 1, 1, 524311, 1, 1, 524312, 1, 131073, 524313, 1, 1, 524314, 1, 1, 524315, 1, 131073, 524316, 1, 1, 524317, 1, 1, 524318, 1, 131073, 524319, 1, 1, 524320, 1, 1, 524321, 1, 131073, 524322, 1, 1, 524323, 1, 1, 524324, 1, 131073, 524325, 1, 1, 524326, 1, 1, 524327, 1, 2, 589833, 1, 262147, 589836, 1, 131076, 589839, 1, 262147, 589842, 1, 262147, 589845, 1, 65539, 589848, 1, 262147, 589851, 1, 262148, 589854, 1, 262147, 589857, 1, 262148, 589860, 1, 65539, 589863, 1, 262148, 655369, 1, 131076, 655372, 1, 262147, 655375, 1, 262148, 655378, 1, 262148, 655381, 1, 262148, 655384, 1, 131076, 655387, 1, 262147, 655390, 1, 262147, 655393, 1, 65539, 655396, 1, 131076, 655399, 1, 131076, 720905, 1, 196611, 720906, 1, 1, 720907, 1, 1, 720908, 1, 3, 720909, 1, 1, 720910, 1, 1, 720911, 1, 3, 720912, 1, 1, 720913, 1, 1, 720914, 1, 3, 720915, 1, 1, 720916, 1, 1, 720917, 1, 3, 720918, 1, 1, 720919, 1, 1, 720920, 1, 3, 720921, 1, 1, 720922, 1, 1, 720923, 1, 3, 720924, 1, 1, 720925, 1, 1, 720926, 1, 3, 720927, 1, 1, 720928, 1, 1, 720929, 1, 3, 720930, 1, 1, 720931, 1, 1, 720932, 1, 3, 720933, 1, 1, 720934, 1, 1, 720935, 1, 131075, 786441, 1, 262148, 786444, 1, 65539, 786447, 1, 131076, 786450, 1, 65539, 786453, 1, 262147, 786456, 1, 131076, 786459, 1, 262147, 786462, 1, 262147, 786465, 1, 131076, 786468, 1, 262147, 786471, 1, 131076, 851977, 1, 65539, 851980, 1, 65539, 851983, 1, 262147, 851986, 1, 262148, 851989, 1, 131076, 851992, 1, 262148, 851995, 1, 262148, 851998, 1, 131076, 852001, 1, 262148, 852004, 1, 262147, 852007, 1, 65539, 917510, 6, 0, 917513, 1, 196611, 917514, 1, 1, 917515, 1, 1, 917516, 1, 3, 917517, 1, 1, 917518, 1, 1, 917519, 1, 3, 917520, 1, 1, 917521, 1, 1, 917522, 1, 3, 917523, 1, 1, 917524, 1, 1, 917525, 1, 3, 917526, 1, 1, 917527, 1, 1, 917528, 1, 3, 917529, 1, 1, 917530, 1, 1, 917531, 1, 3, 917532, 1, 1, 917533, 1, 1, 917534, 1, 3, 917535, 1, 1, 917536, 1, 1, 917537, 1, 3, 917538, 1, 1, 917539, 1, 1, 917540, 1, 3, 917541, 1, 1, 917542, 1, 1, 917543, 1, 131075, 983049, 1, 131076, 983052, 1, 65539, 983055, 1, 262148, 983058, 1, 262148, 983061, 1, 131076, 983064, 1, 327683, 983067, 1, 262148, 983070, 1, 262147, 983073, 1, 262148, 983076, 1, 262148, 983079, 1, 262148, 1048585, 1, 131076, 1048588, 1, 65539, 1048591, 1, 262148, 1048594, 1, 262148, 1048597, 1, 65539, 1048600, 5, 0, 1048603, 1, 131076, 1048606, 1, 262148, 1048609, 1, 262147, 1048612, 1, 262148, 1048615, 1, 262147, 1114121, 1, 196611, 1114122, 1, 1, 1114123, 1, 1, 1114124, 1, 3, 1114125, 1, 1, 1114126, 1, 1, 1114127, 1, 3, 1114128, 1, 1, 1114129, 1, 1, 1114130, 1, 3, 1114131, 1, 1, 1114132, 1, 1, 1114133, 1, 3, 1114134, 1, 1, 1114135, 5, 0, 1114136, 5, 0, 1114137, 5, 0, 1114138, 1, 1, 1114139, 1, 3, 1114140, 1, 1, 1114141, 1, 1, 1114142, 1, 3, 1114143, 1, 1, 1114144, 1, 1, 1114145, 1, 3, 1114146, 1, 1, 1114147, 1, 1, 1114148, 1, 3, 1114149, 1, 1, 1114150, 1, 1, 1114151, 1, 131075, 1179657, 1, 131076, 1179660, 1, 65539, 1179663, 1, 262147, 1179666, 1, 262148, 1179669, 1, 262148, 1179671, 5, 0, 1179672, 5, 0, 1179673, 5, 0, 1179675, 1, 131076, 1179678, 1, 131076, 1179681, 1, 262147, 1179684, 1, 262148, 1179687, 1, 131076, 1245193, 1, 65539, 1245196, 1, 131076, 1245199, 1, 262148, 1245202, 1, 131076, 1245205, 1, 65539, 1245207, 5, 0, 1245208, 5, 0, 1245209, 5, 0, 1245211, 1, 65539, 1245214, 1, 262147, 1245217, 1, 262147, 1245220, 1, 131076, 1245223, 1, 262147, 1310729, 1, 196611, 1310730, 1, 1, 1310731, 1, 1, 1310732, 1, 3, 1310733, 1, 1, 1310734, 1, 1, 1310735, 1, 3, 1310736, 1, 1, 1310737, 1, 1, 1310738, 1, 3, 1310739, 1, 1, 1310740, 1, 1, 1310741, 1, 3, 1310742, 1, 1, 1310743, 5, 0, 1310744, 5, 0, 1310745, 5, 0, 1310746, 1, 1, 1310747, 1, 3, 1310748, 1, 1, 1310749, 1, 1, 1310750, 1, 3, 1310751, 1, 1, 1310752, 1, 1, 1310753, 1, 3, 1310754, 1, 1, 1310755, 1, 1, 1310756, 1, 3, 1310757, 1, 1, 1310758, 1, 1, 1310759, 1, 131075, 1376265, 1, 65539, 1376268, 1, 65539, 1376271, 1, 65539, 1376274, 1, 262148, 1376277, 1, 262147, 1376283, 1, 131076, 1376286, 1, 131076, 1376289, 1, 131076, 1376292, 1, 262148, 1376295, 1, 65539, 1441801, 1, 131076, 1441804, 1, 131076, 1441807, 1, 262147, 1441810, 1, 262148, 1441813, 1, 65539, 1441819, 1, 262147, 1441822, 1, 262148, 1441825, 1, 65539, 1441828, 1, 65539, 1441831, 1, 131076, 1507337, 1, 196611, 1507338, 1, 1, 1507339, 1, 1, 1507340, 1, 3, 1507341, 1, 1, 1507342, 1, 1, 1507343, 1, 3, 1507344, 1, 1, 1507345, 1, 1, 1507346, 1, 3, 1507347, 1, 1, 1507348, 1, 1, 1507349, 1, 3, 1507350, 1, 1, 1507351, 1, 1, 1507352, 1, 131073, 1507353, 1, 1, 1507354, 1, 1, 1507355, 1, 3, 1507356, 1, 1, 1507357, 1, 1, 1507358, 1, 3, 1507359, 1, 1, 1507360, 1, 1, 1507361, 1, 3, 1507362, 1, 1, 1507363, 1, 1, 1507364, 1, 3, 1507365, 1, 1, 1507366, 1, 1, 1507367, 1, 131075, 1507369, 6, 0, 1572873, 1, 262147, 1572876, 1, 262148, 1572879, 1, 262148, 1572882, 1, 262147, 1572885, 1, 262147, 1572888, 1, 262148, 1572891, 1, 65539, 1572894, 1, 262148, 1572897, 1, 65539, 1572900, 1, 262147, 1572903, 1, 262148, 1638409, 1, 262147, 1638412, 1, 262147, 1638415, 1, 262148, 1638418, 1, 65539, 1638421, 1, 262147, 1638424, 1, 131076, 1638427, 1, 65539, 1638430, 1, 262147, 1638433, 1, 65539, 1638436, 1, 262147, 1638439, 1, 65539, 1703945, 1, 196611, 1703946, 1, 1, 1703947, 1, 1, 1703948, 1, 3, 1703949, 1, 1, 1703950, 1, 1, 1703951, 1, 3, 1703952, 1, 1, 1703953, 1, 1, 1703954, 1, 3, 1703955, 1, 1, 1703956, 1, 1, 1703957, 1, 3, 1703958, 1, 1, 1703959, 1, 1, 1703960, 1, 3, 1703961, 1, 1, 1703962, 1, 1, 1703963, 1, 3, 1703964, 1, 1, 1703965, 1, 1, 1703966, 1, 3, 1703967, 1, 1, 1703968, 1, 1, 1703969, 1, 3, 1703970, 1, 1, 1703971, 1, 1, 1703972, 1, 3, 1703973, 1, 1, 1703974, 1, 1, 1703975, 1, 131075, 1769481, 1, 131076, 1769484, 1, 262148, 1769487, 1, 262147, 1769490, 1, 262147, 1769493, 1, 262147, 1769496, 1, 65539, 1769499, 1, 131076, 1769502, 1, 262147, 1769505, 1, 262147, 1769508, 1, 65539, 1769511, 1, 262147, 1835017, 1, 262147, 1835020, 1, 65539, 1835023, 1, 262148, 1835026, 1, 262147, 1835029, 1, 65539, 1835032, 1, 262147, 1835035, 1, 262148, 1835038, 1, 262148, 1835041, 1, 262147, 1835044, 1, 262147, 1835047, 1, 262147, 1900553, 1, 131072, 1900554, 1, 1, 1900555, 1, 1, 1900556, 1, 65537, 1900557, 1, 1, 1900558, 1, 1, 1900559, 1, 65537, 1900560, 1, 1, 1900561, 1, 1, 1900562, 1, 65537, 1900563, 1, 1, 1900564, 1, 1, 1900565, 1, 65537, 1900566, 1, 1, 1900567, 1, 1, 1900568, 1, 65537, 1900569, 1, 1, 1900570, 1, 1, 1900571, 1, 65537, 1900572, 1, 1, 1900573, 1, 1, 1900574, 1, 65537, 1900575, 1, 1, 1900576, 1, 1, 1900577, 1, 65537, 1900578, 1, 1, 1900579, 1, 1, 1900580, 1, 65537, 1900581, 1, 1, 1900582, 1, 1, 1900583, 1, 65538 )

[node name="cam" type="Camera2D" parent="."]
position = Vector2( 320, 240 )
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="air_spawn_1" parent="cam" instance=ExtResource( 7 )]
position = Vector2( -328, 248 )

[node name="air_spawn_2" parent="cam" instance=ExtResource( 7 )]
position = Vector2( -328, -248 )

[node name="air_spawn_3" parent="cam" instance=ExtResource( 7 )]
position = Vector2( 328, -248 )

[node name="air_spawn_4" parent="cam" instance=ExtResource( 7 )]
position = Vector2( 328, 248 )

[node name="soundmaker" parent="cam" instance=ExtResource( 5 )]
position = Vector2( -8, 20 )

[node name="spawn_1" parent="." instance=ExtResource( 3 )]
position = Vector2( 312.219, 246.083 )

[node name="turret_spawn_1" parent="." instance=ExtResource( 8 )]
position = Vector2( 32.128, 168.199 )

[node name="turret_spawn_2" parent="." instance=ExtResource( 8 )]
position = Vector2( 592.036, 311.249 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 312, 248 )

[node name="Walls" type="StaticBody2D" parent="."]
position = Vector2( 480, 136 )
collision_layer = 8
collision_mask = 5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -80, -60 )
polygon = PoolVector2Array( -332, 340, -332, -4, -336, -80, -400, -80, -404, 416, 248, 416, 248, -80, -336, -80, -332, -4, 156, -4, 156, 340 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -196, 48 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D67" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -196, 48 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D68" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -196, 48 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D69" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -196, 48 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D70" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -196, 48 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D71" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -148, 48 )
polygon = PoolVector2Array( -64, 32, -64, -9, -24, -9, -24, 12, -28, 12, -28, 28, -44, 28, -44, 32 )

[node name="CollisionPolygon2D72" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -100, 48 )
polygon = PoolVector2Array( -64, 12, -64, -9, -24, -9, -24, 32, -44, 32, -44, 28, -60, 28, -60, 12 )

[node name="CollisionPolygon2D73" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -96, 96 )
polygon = PoolVector2Array( -48, -8, -28, -8, -28, 32, -48, 32 )

[node name="CollisionPolygon2D74" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -164, 96 )
polygon = PoolVector2Array( -48, -8, -28, -8, -28, 32, -48, 32 )

[node name="CollisionPolygon2D75" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -164, 144 )
polygon = PoolVector2Array( -48, -8, -28, -8, -28, -4, 20, -4, 20, -8, 40, -8, 40, 32, -48, 32 )

[node name="CollisionPolygon2D27" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( 92, 240 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D28" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( 44, 240 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D29" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -4, 240 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D30" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( 92, 192 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D31" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -52, 240 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D32" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( 44, 192 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D33" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -4, 192 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D34" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -52, 192 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D35" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -100, 240 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D36" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -148, 240 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D37" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -196, 240 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D38" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -100, 192 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D39" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -148, 192 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D40" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -244, 240 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D41" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -292, 240 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D42" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -196, 192 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D43" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -244, 192 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D44" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -292, 192 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D45" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -340, 240 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D46" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -340, 192 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D47" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( 92, 144 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D48" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( 44, 144 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D49" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -4, 144 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D50" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -52, 144 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D51" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -196, 144 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D52" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -244, 144 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D53" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -292, 144 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D54" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -340, 144 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D55" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( 92, 96 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D56" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( 44, 96 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D57" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -4, 96 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D58" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -52, 96 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D59" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -196, 96 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D60" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -244, 96 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D61" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( 92, 48 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D62" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( 44, 48 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D63" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -4, 48 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D64" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -52, 48 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D65" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -292, 96 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D66" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -340, 96 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -244, 48 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -292, 48 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -340, 48 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -340, 0 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -292, 0 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D9" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -244, 0 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D10" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -196, 0 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D11" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -148, 0 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D12" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -100, 0 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D13" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -52, 0 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D14" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -4, 0 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D15" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( 44, 0 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D16" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( 92, 0 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D17" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( 92, -48 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D18" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( 44, -48 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D19" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -4, -48 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D20" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -52, -48 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D21" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -100, -48 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D22" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -148, -48 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D23" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -196, -48 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D24" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -244, -48 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D25" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -292, -48 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="CollisionPolygon2D26" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -340, -48 )
polygon = PoolVector2Array( -64, 31, -64, -9, -24, -9, -24, 31 )

[node name="Spawn" type="Timer" parent="."]
autostart = true

[node name="waiting" type="Timer" parent="."]
wait_time = 4.0
[connection signal="timeout" from="Spawn" to="." method="_on_Spawn_timeout"]
[connection signal="timeout" from="waiting" to="." method="_on_waiting_timeout"]
